--- a/Actividad/index.html
+++ b/Actividad/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Actividad</title>
 </head>
 <body>
-    
+    <!-- Encabezado -->
+    <h1>Actividad 1 , usando lo aprendido</h1>
+    <!-- Menu -->
+    <ul>
+        <li>Inicio</li>
+        <li>Contenidos</li>
+        <li>Contacto</li>
+    </ul>
+
+    <hr/>
+    <!-- Contenido de Index -->
+    <h2>Bienvenido al website</h2>
+    <img src="Imagenes/5.jpeg" alt="Zorro" title=Zorro">
+    <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting
+         industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+         when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, 
+         but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+    </p>
 </body>
 </html>
